# RobotWhisperer

./: +layout_bk.svelte  .gitignore  .prettierignore  LICENSE  README.md  RequestItem copy 1.svelte  RequestItem copy.svelte  TabBar copy.svelte  eslint.config.js  lefthook.yml  package.json  requestStore copy.ts  tabStore.ts  vite-plugin-urdf-manifest.js  vite.config.js  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
bridge-client-design/: Dockerfile  package copy.json  package.json  vite.config.ts
bridge-client-design/routes/: App.svelte
bridge-client-design/src/: main.ts
bridge-client-design/src-tauri/: tauri.conf.json
bridge-client-design/src-tauri/src/: main.rs
bridge-client-design/src/lib/: db.ts  hashing.ts  types.ts
bridge-client-design/src/routes/: +layout.svelte  +page.svelte
bridge-client-design/src/ui/: LogDecoder.svelte  boot.ts  store.ts
scripts/: prep-robot-assets.py
src/: app copy.css  app.css  app.html  service-worker.js  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/rw-canonical/: Cargo.toml
src-tauri/crates/rw-canonical/src/: dialect.rs  hash.rs  id.rs  lib.rs  schema.rs  value.rs  viz.rs
src-tauri/crates/rw-codec-cdr/: Cargo.toml
src-tauri/crates/rw-codec-cdr/src/: decode.rs  encode.rs  lib.rs
src-tauri/crates/rw-codec-json/: Cargo.toml
src-tauri/crates/rw-codec-json/src/: lib.rs
src-tauri/crates/rw-codec-rosmsg/: Cargo.toml
src-tauri/crates/rw-codec-rosmsg/src/: lib.rs
src-tauri/crates/rw-core/: Cargo.toml
src-tauri/crates/rw-core/proptest-regressions/storage/: export.txt
src-tauri/crates/rw-core/src/: error.rs  ids.rs  lib.rs
src-tauri/crates/rw-core/src/domain/: collection.rs  connection.rs  mod.rs  request.rs  value.rs  workspace.rs
src-tauri/crates/rw-core/src/schema/: defaults.rs  hash.rs  mod.rs  parser.rs  registry.rs
src-tauri/crates/rw-core/src/schema/defaults_data/geometry_msgs/msg/: Quaternion.msg
src-tauri/crates/rw-core/src/schema/defaults_data/nav_msgs/msg/: MapMetaData.msg
src-tauri/crates/rw-core/src/schema/defaults_data/sensor_msgs/msg/: NavSatFix.msg  NavSatStatus.msg  PointCloud2.msg  PointField.msg  Range.msg  Temperature.msg
src-tauri/crates/rw-core/src/schema/defaults_data/visualization_msgs/msg/: Marker.msg  MarkerArray.msg  MeshFile.msg
src-tauri/crates/rw-core/src/storage/: export.rs  indexeddb.rs  mod.rs
src-tauri/crates/rw-core/src/storage/sqlite/: migrations.rs  mod.rs
src-tauri/crates/rw-core/src/util/: clock.rs  mod.rs
src-tauri/crates/rw-core/src/visualization/: image.rs  marker_array.rs  mod.rs
src-tauri/crates/rw-pipeline/: Cargo.toml
src-tauri/crates/rw-pipeline/src/: lib.rs
src-tauri/crates/rw-pipeline/tests/: forwarder_lag.rs
src-tauri/crates/rw-schema-foxglove/: Cargo.toml
src-tauri/crates/rw-schema-foxglove/src/: lib.rs
src-tauri/crates/rw-schema-ros1/: Cargo.toml
src-tauri/crates/rw-schema-ros1/src/: lib.rs
src-tauri/crates/rw-schema-ros2/: Cargo.toml
src-tauri/crates/rw-schema-ros2/src/: lib.rs
src-tauri/crates/rw-session/: Cargo.toml
src-tauri/crates/rw-session/src/: lib.rs
src-tauri/crates/rw-session/tests/: fanout.rs  live_fanout.rs
src-tauri/crates/rw-transport/: Cargo.toml
src-tauri/crates/rw-transport-dummy/: Cargo.toml
src-tauri/crates/rw-transport-dummy/src/: lib.rs
src-tauri/crates/rw-transport-foxglove-ws/: Cargo.toml
src-tauri/crates/rw-transport-foxglove-ws/src/: lib.rs  wire.rs
src-tauri/crates/rw-transport-foxglove-ws/tests/: live_action.rs  live_add_two_ints_service.rs  live_discovery_schemas.rs  live_ros1_service.rs  live_ros1_subscribe.rs  live_subscribe.rs  probe_ros1.rs
src-tauri/crates/rw-transport-rosbridge/: Cargo.toml
src-tauri/crates/rw-transport-rosbridge/src/: lib.rs  wire.rs
src-tauri/crates/rw-transport-rosbridge/tests/: live_action.rs  live_service.rs  live_subscribe.rs
src-tauri/crates/rw-transport/src/: action.rs  lib.rs  task.rs  time.rs
src-tauri/crates/rw-validation/: Cargo.toml
src-tauri/crates/rw-validation/src/: lib.rs
src-tauri/crates/rw-validation/tests/: bridge_reachability.rs  core_parity_header.rs  core_parity_image.rs  core_parity_laserscan.rs  core_parity_marker_array.rs  core_parity_pointcloud2.rs  core_parity_pose.rs  core_parity_string.rs  core_parity_transform_stamped.rs  core_parity_twist.rs  custom_parity_inquire_service.rs  custom_parity_nested_top.rs  services_parity_rosapi_topics.rs
src-tauri/crates/rw-validation/tests/support/: mod.rs
src-tauri/crates/rw-wasm/: Cargo.toml
src-tauri/crates/rw-wasm/src/: lib.rs
src-tauri/crates/rw-wire/: Cargo.toml
src-tauri/crates/rw-wire/src/: lib.rs
src-tauri/crates/rw-ws/: Cargo.toml
src-tauri/crates/rw-ws/src/: lib.rs  native.rs  wasm.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ingest_ws.rs  lib.rs  main.rs  pipeline.rs
src-tauri/src/commands/: diagnostics.rs  mod.rs  pipeline.rs  schema.rs  workspace.rs
src/lib/: db.ts  themes.ts
src/lib/components/: AnimatedBot.svelte  MainScreen.svelte  RequestEditor copy.svelte  RequestEditor.svelte  TabBar copy.svelte  TabBar.svelte  TypeBadge.svelte  WelcomeScreen.svelte
src/lib/core/: diagnostics.ts  image.ts  pipelineHub.ts  pipelineRpc.shared.ts  pipelineRpc.tauri.ts  pipelineRpc.ts  pipelineRpc.wasm.ts  platform.ts  schema.ts  schemaNames.ts  session.ts  types.ts  workspaceRpc.ts
src/lib/robotkit/: envMap.ts  floor.ts  index.ts  jointDriver.ts  jointModel.ts  meshAssetUrl.ts  meshLoader.ts  robotCatalog.ts  robotMaterials.ts  robotScene.ts  urdfModel.ts
src/lib/ros/: provider.ts  ros.service.ts  types.ts  wsFoxgloveProvider.ts
src/lib/stores/: connectionStore.svelte.ts  dashboardStore.svelte.ts  discoveryStore.svelte.ts  fullscreenStore.svelte.ts  modalStore.svelte.ts  requestStore.ts  requestsStore.svelte.ts  rosStore.ts  settingsStore.svelte.ts  subscriptionStore.svelte.ts  tabsStore.svelte.ts  workspaceIo.ts  workspaceStore copy.ts  workspaceStore.ts
src/routes/: +layout.svelte  +page.svelte
static/assets/: ATTRIBUTIONS.md  manifest.json  robots.config.json
vite/: mesh-optimize.ts  urdf-manifest.ts
(+152 files in other folders)
