[package]
name = "rw-codec-json"
version = "0.1.0"
edition.workspace = true
description = "rosbridge JSON codec for canonical values"

[lib]
path = "src/lib.rs"

[dependencies]
rw-canonical = { path = "../rw-canonical" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
