[package]
name = "rw-schema-ros1"
version = "0.1.0"
edition.workspace = true
description = "Parse ROS 1 message, service, and action definitions"

[lib]
path = "src/lib.rs"

[dependencies]
rw-canonical = { path = "../rw-canonical" }
rw-schema-ros2 = { path = "../rw-schema-ros2" }
thiserror = { workspace = true }
