[package]
name = "rw-ws"
version = "0.1.0"
edition.workspace = true
description = "Cross-target WebSocket client abstraction"

[lib]
path = "src/lib.rs"

[dependencies]
futures-util = "0.3"
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
url = "2"

[target.'cfg(target_family = "wasm")'.dependencies]
ws_stream_wasm = "0.7"
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { workspace = true, features = ["macros", "sync"] }
